--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "scroll-into-view": "^1.14.2",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.0",
     "uuid-token-generator": "^1.0.0"
